# stationeers_lang

./: .editorconfig  .gitignore  2  Cargo.toml  Changelog.md  Dockerfile.build  LICENSE  README.md  TEST_CONVERSION_GUIDE.md  build.sh  clean.sh  output.ic10  output.stationeers  spilling.slang  stationeers_lang.sln  test.slang
rust_compiler/: Cargo.toml  build.rs
rust_compiler/libs/compiler/: Cargo.toml
rust_compiler/libs/compiler/src/: lib.rs  symbols.rs  v1.rs  variable_manager.rs
rust_compiler/libs/compiler/src/test/: binary_expression.rs  branching.rs  declaration_function_invocation.rs  declaration_literal.rs  device_access.rs  edge_cases.rs  error_handling.rs  function_declaration.rs  logic_expression.rs  loops.rs  math_syscall.rs  mod.rs  negation_priority.rs  scoping.rs  symbol_documentation.rs  syscall.rs  tuple_literals.rs
rust_compiler/libs/compiler/test_files/: script.stlg
rust_compiler/libs/formatter/: Cargo.toml
rust_compiler/libs/formatter/src/: lib.rs
rust_compiler/libs/formatter/src/test/: const_expr.rs  mod.rs
rust_compiler/libs/helpers/: Cargo.toml
rust_compiler/libs/helpers/src/: helper_funcs.rs  lib.rs  macros.rs  syscall.rs
rust_compiler/libs/il/: Cargo.toml
rust_compiler/libs/il/src/: lib.rs
rust_compiler/libs/integration_tests/: .gitattributes  Cargo.toml  README.md
rust_compiler/libs/integration_tests/src/: bitwise_tests.rs  common.rs  device_indexing_tests.rs  function_tests.rs  lib.rs  number_literal_tests.rs  optimization_tests.rs
rust_compiler/libs/integration_tests/src/snapshots/: integration_tests__bitwise_tests__bitwise_tests__bitwise_constant_folding.snap  integration_tests__bitwise_tests__bitwise_tests__bitwise_operations.snap  integration_tests__bitwise_tests__bitwise_tests__bitwise_shifts.snap  integration_tests__bitwise_tests__bitwise_tests__bitwise_with_const.snap  integration_tests__bitwise_tests__bitwise_tests__bitwise_with_variables.snap  integration_tests__bitwise_tests__bitwise_tests__complex_bit_manipulation.snap  integration_tests__bitwise_tests__bitwise_tests__sorter_bitwise_operations.snap  integration_tests__device_indexing_tests__device_indexing_tests__device_indexing_complex_expression.snap  integration_tests__device_indexing_tests__device_indexing_tests__device_indexing_optimization_folds_constants.snap  integration_tests__device_indexing_tests__device_indexing_tests__device_indexing_with_binary_literals.snap  integration_tests__device_indexing_tests__device_indexing_tests__device_indexing_with_computed_index.snap  integration_tests__device_indexing_tests__device_indexing_tests__device_indexing_with_hash_and_binary_literals.snap  integration_tests__function_tests__function_tests__function_with_call.snap  integration_tests__function_tests__function_tests__leaf_function_no_stack_frame.snap  integration_tests__function_tests__function_tests__nested_function_calls.snap  integration_tests__function_tests__function_tests__simple_leaf_function.snap  integration_tests__integration_tests__larre_script.snap  integration_tests__integration_tests__reagent_processing.snap  integration_tests__integration_tests__setbatched_with_member_access.snap  integration_tests__integration_tests__test_larre_script.snap  integration_tests__integration_tests__tuples.snap  integration_tests__number_literal_tests__number_literal_tests__binary_literals.snap  integration_tests__number_literal_tests__number_literal_tests__number_literal_optimization.snap  integration_tests__optimization_tests__optimization_tests__algebraic_simplification.snap  integration_tests__optimization_tests__optimization_tests__complex_arithmetic.snap  integration_tests__optimization_tests__optimization_tests__constant_folding.snap  integration_tests__optimization_tests__optimization_tests__dead_code_elimination.snap  integration_tests__optimization_tests__optimization_tests__min_assignment_register_forwarding_in_loop.snap  integration_tests__optimization_tests__optimization_tests__peephole_comparison_fusion.snap  integration_tests__optimization_tests__optimization_tests__select_optimization.snap  integration_tests__optimization_tests__optimization_tests__strength_reduction.snap  integration_tests__optimization_tests__optimization_tests__syscall_binary_expression_register_forwarding.snap  integration_tests__tests__algebraic_simplification.snap  integration_tests__tests__complex_arithmetic.snap  integration_tests__tests__constant_folding.snap  integration_tests__tests__dead_code_elimination.snap  integration_tests__tests__dead_code_elimination.snap.new  integration_tests__tests__function_with_call.snap  integration_tests__tests__larre_script.snap  (+10 more)
rust_compiler/libs/optimizer/: Cargo.toml  OPTIMIZATION_IDEAS.md
rust_compiler/libs/optimizer/src/: algebraic_simplification.rs  constant_propagation.rs  dead_code.rs  dead_store_elimination.rs  function_call_optimization.rs  helpers.rs  label_resolution.rs  leaf_function.rs  leaf_function_optimization.rs  lib.rs  peephole_optimization.rs  register_forwarding.rs  strength_reduction.rs
rust_compiler/libs/parser/: Cargo.toml
rust_compiler/libs/parser/src/: lib.rs  macros.rs  sys_call.rs  tree_node.rs
rust_compiler/libs/parser/src/test/: blocks.rs  (+2 more)
rust_compiler/libs/tokenizer/: Cargo.toml
rust_compiler/libs/tokenizer/src/: lib.rs  token.rs
rust_compiler/libs/tokenizer/tests/: file.stlg
rust_compiler/src/: lib.rs  main.rs
rust_compiler/src/ffi/: mod.rs
(+57 files in other folders)
