[package]
name = "slang"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["libs/*"]

[workspace.dependencies]
quick-error = "2"
rust_decimal = "1"
safer-ffi = { version = "0.1" }

[features]
headers = ["safer-ffi/headers"]

[profile.release]
strip = true

[[bin]]
name = "slang"
path = "src/main.rs"

[[bin]]
name = "generate-headers"
path = "src/bin/generate_headers.rs"
required-features = ["headers"]

[lib]
name = "slang"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
quick-error = { workspace = true }
rust_decimal = { workspace = true }
tokenizer = { path = "libs/tokenizer" }
parser = { path = "libs/parser" }
compiler = { path = "libs/compiler" }
safer-ffi = { workspace = true }

[dev-dependencies]
anyhow = { version = "^1.0", features = ["backtrace"] }
