[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
parser = { path = "../parser" }
tokenizer = { path = "../tokenizer" }
helpers = { path = "../helpers" }
il = { path = "../il" }
lsp-types = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
anyhow = { version = "1.0" }
indoc = { version = "2.0" }
pretty_assertions = "1"
