[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-error = { workspace = true }
tokenizer = { path = "../tokenizer" }
helpers = { path = "../helpers" }
lsp-types = { workspace = true }
thiserror = "2"


[dev-dependencies]
anyhow = { version = "1" }
pretty_assertions = "1.4"
