[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[dependencies]
tokenizer = { path = "../tokenizer" }
helpers = { path = "../helpers" }
lsp-types = { workspace = true }
safer-ffi = { workspace = true }
thiserror = { workspace = true }


[dev-dependencies]
anyhow = { version = "1" }
pretty_assertions = "1.4"
